✨ Add v1 of the game
Description:
- Players :
  - Can be played with any number of players
  - The players currently don't use their keys to refresh the shop or
  move the messenger

- Cards :
  - Every card are created, without effects, messenger's movements nor
  final points
  - They are separated in two lists, castle's inhabitants and villagers
  - There is no messenger movement, meaning that the game is currently
  only played with the villagers deck

- Players play 9 turns, during which they :
  - pick a card :
    - as long as they have money to pay for it, the card is picked
    randomly between the available cards,
    - if they don't have enough money, they pick a random reversed card,
  - choose a position between available positions :
    - if there is no card already placed, the first card is placed in
    the center of the board,
  - place the chosen card at the chosen position,
  - finally available cards are refilled.

Add the game logs in target/test-logs/test.log after running a playing
game test.